examples/test/testpolicy18586.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18586
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key7: value30
      key42: value35
      key0: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value30
          key25: value18
      podSelector:
        matchLabels:
          key2: value32
          key10: value20
          key31: value21
